# candidate-data-transformer

./: .gitignore  Design.md  README.md  main.py  pyproject.toml  streamlit_app.py
data/: skills_taxonomy.csv
samples/: custom_config.json
samples/ats_json/: andrej_karpathy.json  kelsey_hightower.json  priya_nair.json  sam_lindqvist.json
samples/github/: andrej_karpathy.json  kelsey_hightower.json  priya_nair.json
samples/output/: custom_output.json  default_output.json  multi_candidate_output.json
samples/recruiter_csv/: andrej_karpathy.csv  kelsey_hightower.csv  marcus_bell.csv  multi_candidate.csv  priya_nair.csv  sam_lindqvist.csv
samples/recruiter_notes/: dana_okoro.txt  kelsey_hightower.txt  marcus_bell.txt  priya_nair.txt
scripts/: threshold_probe.py
src/transformer/: audit.py  cli.py  ingest.py  merge.py  models.py  pipeline.py  project.py  score.py
src/transformer/normalize/: ats_normalizer.py  csv_normalizer.py  formats.py  github_normalizer.py  notes_normalizer.py  orchestrator.py  skills.py
src/transformer/sources/: ats_source.py  csv_source.py  github_source.py  notes_source.py
tests/: test_audit.py  test_cli.py  test_formats.py  test_generated_samples.py  test_ingest.py  test_merge.py  test_module.py  test_multi_candidate.py  test_normalize.py  test_pipeline.py  test_project.py  test_score.py  test_skills.py  test_sources.py
